nodejs-app/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
  name: simple-service
spec: {}
