nodejs-app/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2" 
  namespace: simple-service
  name: nodejs-demo-service
  labels:
    svc: nodejs-demo
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nodejs-demo
