nodejs-app/deploy/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3" 
  labels:
    app: nodejs-demo
  name: nodejs-demo
  namespace: simple-service
spec:
  host:
  port:
    targetPort: http
  to:
    kind: Service
    name: nodejs-demo-service
    weight: 100
  wildcardPolicy: None
